--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -18,8 +18,6 @@
     "release": "standard-version",
     "ng": "ng",
     "test": "ng test",
-    "integration-test-1": "gushio gushio/run-integration-test-1.js",
-    "integration-test-2": "gushio gushio/run-integration-test-2.js",
     "build-dev": "gushio gushio/target-build.js aot",
     "build-prod": "gushio gushio/target-build.js 'configuration production'",
     "run-local": "electron --enable-accelerated-mjpeg-decode --enable-accelerated-video --ignore-gpu-blacklist --enable-native-gpu-memory-buffers --enable-gpu-rasterization --ignore-gpu-blacklist .",
@@ -233,6 +231,7 @@
     "@angular/cli": "^13.2.2",
     "@angular/compiler-cli": "^13.2.2",
     "@angular/language-service": "^13.2.2",
+    "@aws-sdk/client-sts": "^3.185.0",
     "@babel/plugin-proposal-decorators": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-typescript": "^7.16.5",
