chore: added ref to nightly build action checkout step
updated desktop app nighly version generation

--- a/.github/workflows/desktop-app-nightly-cd.yml
+++ b/.github/workflows/desktop-app-nightly-cd.yml
@@ -41,6 +41,8 @@ jobs:
     needs: [ clean-nightly-latest ]
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: LEAP-707-aws-sso-session-token-not-found-or-invalid
       - name: Build and release core (nightly)
         run: |
           cd packages/core
