--- a/.github/workflows/desktop-app-nightly-cd.yml
+++ b/.github/workflows/desktop-app-nightly-cd.yml
@@ -41,6 +41,8 @@ jobs:
     needs: [ clean-nightly-latest ]
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: LEAP-707-aws-sso-session-token-not-found-or-invalid
       - name: Build and release core (nightly)
         run: |
           cd packages/core
@@ -68,6 +70,8 @@ jobs:
           git config --global core.eol lf
 
       - uses: actions/checkout@v3
+        with:
+          ref: LEAP-707-aws-sso-session-token-not-found-or-invalid
 
       - name: Build Win desktop app (nightly)
         shell: bash
@@ -109,6 +113,8 @@ jobs:
     needs: [ build-and-release-core-and-cli ]
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: LEAP-707-aws-sso-session-token-not-found-or-invalid
 
       - name: Build Linux desktop app (nightly)
         run: |
@@ -140,6 +146,8 @@ jobs:
     needs: [ build-and-release-core-and-cli ]
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: LEAP-707-aws-sso-session-token-not-found-or-invalid
 
       - name: Build macOS x64 desktop app (nightly)
         uses: nick-fields/retry@v2
@@ -209,6 +217,8 @@ jobs:
     needs: [ build-and-release-core-and-cli, build-macos-x64 ]
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: LEAP-707-aws-sso-session-token-not-found-or-invalid
 
       - name: Build macOS arm64 desktop app (nightly)
         uses: nick-fields/retry@v2
