--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "lint": "eslint .",
     "lint:fix": "npm run lint -- --fix",
     "prepare": "husky install",
-    "leapp-release": "gushio gushio/release.js"
+    "leapp-release": "gushio gushio/release.js",
+    "make-badges": "gushio gushio/make-badges.js"
   },
   "lint-staged": {
     "*.{ts,html}": "eslint --fix"
   },
   "dependencies": {
+    "coverage-badges-cli": "^1.0.11",
     "tsoa": "^4.1.0"
   }
 }
