chore: added gushio script for making tests and generating badges

--- a/.github/workflows/cli-ci-cd.yml
+++ b/.github/workflows/cli-ci-cd.yml
@@ -34,8 +34,7 @@ jobs:
           npm run prepack
       - name: Test
         run: |
-          cd packages/cli
-          npm test
+          npm run make-badges cli
       - name: Lint
         run: |
           npm run lint
