--- a/.github/workflows/cli-ci-cd.yml
+++ b/.github/workflows/cli-ci-cd.yml
@@ -15,6 +15,7 @@ jobs:
         node_version: [ 16 ]
     env:
       SKIP_INTEGRATION_TESTS: "true"
+      S3_BUCKET: s3://noovolari-leapp-website-distribution
     runs-on: ${{ matrix.os }}
     steps:
       - name: Prepare GIT
@@ -32,9 +33,20 @@ jobs:
         run: |
           cd packages/cli
           npm run prepack
+      - name: Configure AWS Credentials
+          uses: aws-actions/configure-aws-credentials@v1
+          with:
+            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            aws-region: eu-west-1
       - name: Test
         run: |
           npm run make-badges cli
+      - name: Send badge to S3
+          shell: bash
+          run: |
+            cd coverage
+            aws s3 cp cli-badges.svg "${{ env.S3_BUCKET }}/coverage-badges/"
       - name: Lint
         run: |
           npm run lint
