--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -156,7 +156,7 @@
     "@ngx-translate/core": "~13.0.0",
     "@ngx-translate/http-loader": "~6.0.0",
     "@noovolari/dpapi-addon": "0.1.2",
-    "@noovolari/leapp-core": "0.1.125",
+    "@noovolari/leapp-core": "file:../core",
     "@types/aws-sdk": "^2.7.0",
     "assert": "2.0.0",
     "aws-sdk": "2.928.0",
@@ -176,6 +176,7 @@
     "electron-notarize": "~1.0.0",
     "electron-osx-sign": "~0.5.0",
     "electron-reload": "^1.5.0",
+    "electron-tabs": "^1.0.1",
     "electron-updater": "^4.3.8",
     "extract-zip": "~2.0.1",
     "fix-path": "~3.0.0",
