chore: fixed gushio scripts, now every pipeline has its own command

--- a/.github/workflows/cli-ci-cd.yml
+++ b/.github/workflows/cli-ci-cd.yml
@@ -41,7 +41,7 @@ jobs:
           aws-region: eu-west-1
       - name: Test
         run: |
-          npm run make-badges cli
+          npm run make-badges-cli
       - name: Send badge to S3
         shell: bash
         run: |
