--- a/.github/workflows/desktop-app-nightly-cd.yml
+++ b/.github/workflows/desktop-app-nightly-cd.yml
@@ -3,7 +3,7 @@ name: Leapp Desktop App Nightly CD
 on:
   push:
     branches:
-      - LEAP-707-aws-sso-session-token-not-found-or-invalid
+      - master
   schedule:
     - cron: '0 0 * * *'
   workflow_dispatch:
@@ -42,7 +42,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          ref: LEAP-707-aws-sso-session-token-not-found-or-invalid
+          ref: master
       - name: Build and release core (nightly)
         run: |
           cd packages/core
@@ -71,7 +71,7 @@ jobs:
 
       - uses: actions/checkout@v3
         with:
-          ref: LEAP-707-aws-sso-session-token-not-found-or-invalid
+          ref: master
 
       - name: Build Win desktop app (nightly)
         shell: bash
@@ -114,7 +114,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          ref: LEAP-707-aws-sso-session-token-not-found-or-invalid
+          ref: master
 
       - name: Build Linux desktop app (nightly)
         run: |
@@ -147,7 +147,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          ref: LEAP-707-aws-sso-session-token-not-found-or-invalid
+          ref: master
 
       - name: Build macOS x64 desktop app (nightly)
         uses: nick-fields/retry@v2
@@ -218,7 +218,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          ref: LEAP-707-aws-sso-session-token-not-found-or-invalid
+          ref: master
 
       - name: Build macOS arm64 desktop app (nightly)
         uses: nick-fields/retry@v2
