--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -156,7 +156,7 @@
     "@ngx-translate/core": "~13.0.0",
     "@ngx-translate/http-loader": "~6.0.0",
     "@noovolari/dpapi-addon": "0.1.2",
-    "@noovolari/leapp-core": "0.1.127",
+    "@noovolari/leapp-core": "file:../core",
     "@types/aws-sdk": "^2.7.0",
     "assert": "2.0.0",
     "aws-sdk": "2.928.0",
@@ -191,7 +191,6 @@
     "jwt-decode": "~3.1.2",
     "keytar": "7.9.0",
     "markdown-it": "^12.0.6",
-    "menubar": "^9.2.3",
     "mousetrap": "~1.6.5",
     "ms": "^2.1.3",
     "nan": "^2.13.2",
@@ -241,12 +240,12 @@
     "@types/node-ipc": "9.2.0",
     "@types/uuid": "^8.3.0",
     "dotenv": "^10.0.0",
-    "electron": "^19.1.8",
-    "electron-builder": "^23.0.2",
-    "electron-builder-squirrel-windows": "22.14.3",
-    "electron-packager": "15.4.0",
+    "electron": "22.0.0",
+    "electron-builder": "22.10.3",
+    "electron-builder-squirrel-windows": "22.10.3",
+    "electron-packager": "^17.1.1",
     "electron-rebuild": "3.2.9",
-    "gushio": "~0.7.0",
+    "gushio": "0.7.1",
     "husky": "^7.0.0",
     "jasmine": "^3.7.0",
     "jasmine-core": "~3.7.1",
