--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -60,7 +60,7 @@
     "@types/jest": "^27.4.1",
     "aws-cdk": "2.31.0",
     "aws-cdk-lib": "2.31.0",
-    "gushio": "~0.7.0",
+    "gushio": "0.7.2",
     "jest": "^27.4.5",
     "typescript": "4.5.5"
   },
