chore: re added edit and footer navigation to docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -68,6 +68,8 @@ theme:
     - navigation.instant
     - navigation.indexes
     - navigation.top
+    - navigation.footer
+    - content.action.edit
     - content.code.annotate
     - search.suggest
     - search.highlight
