--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -20,7 +20,7 @@
     "class-transformer": "^0.4.0",
     "compare-versions": "^3.6.0",
     "copy-dir": "~1.3.0",
-    "crypto-js": "~4.0.0",
+    "crypto-js": "4.1.1",
     "date-fns": "^2.26.0",
     "es6-shim": "^0.35.6",
     "extract-zip": "~2.0.1",
