--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -48,7 +48,7 @@
     "node-ipc": "9.2.1",
     "node-log-rotate": "~0.1.5",
     "node-machine-id": "~1.1.12",
-    "oclif": "^2.6.0",
+    "oclif": "3.6.1",
     "open": "^8.4.0",
     "ps-list": "^8.1.0",
     "ps-node": "^0.1.6",
