--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -156,7 +156,7 @@
     "@ngx-translate/core": "~13.0.0",
     "@ngx-translate/http-loader": "~6.0.0",
     "@noovolari/dpapi-addon": "0.1.2",
-    "@noovolari/leapp-core": "file:../core",
+    "@noovolari/leapp-core": "0.1.131",
     "@types/aws-sdk": "^2.7.0",
     "assert": "2.0.0",
     "aws-sdk": "2.928.0",
@@ -167,7 +167,7 @@
     "class-transformer": "^0.4.0",
     "compare-versions": "^3.6.0",
     "copy-dir": "~1.3.0",
-    "crypto-js": "~4.0.0",
+    "crypto-js": "4.1.1",
     "date-fns": "^2.26.0",
     "electron-default-menu": "~1.0.2",
     "electron-is-dev": "^2.0.0",
