--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@noovolari/leapp-cli",
   "description": "Leapp's Command Line Interface\n\nIt relies on Leapp Core, which encapsulates the domain logic.\n\nFor more information about the project visit the [site](www.leapp.cloud).",
-  "version": "0.1.28",
+  "version": "0.1.29",
   "author": {
     "name": "Noovolari",
     "email": "info@noovolari.com"
@@ -13,7 +13,7 @@
   "dependencies": {
     "@azure/msal-node": "^1.9.0",
     "@babel/plugin-proposal-decorators": "^7.16.5",
-    "@noovolari/leapp-core": "file:../core",
+    "@noovolari/leapp-core": "0.1.131",
     "@oclif/core": "1.6.0",
     "@oclif/plugin-help": "^5.1.12",
     "@types/inquirer": "8.2.0",
