--- a/.github/workflows/cli-ci-cd.yml
+++ b/.github/workflows/cli-ci-cd.yml
@@ -67,8 +67,7 @@ jobs:
         id: validator
         run: |
           git fetch
-          COMMIT_HASH=$(git log --format="%H" -n 1)
-          TAG=$(git tag --contains $GITHUB_SHA)
+          TAG=$(git tag --points-at $GITHUB_SHA)
           MATCH=$(echo "$TAG" | grep "^cli-v[0-9]\+\.[0-9]\+\.[0-9]\+$" || true)
           if [[ $MATCH != "" ]]; then IS_VALID_TAG=1; else IS_VALID_TAG=0; fi;
           echo "::set-output name=VALID_TAG::$IS_VALID_TAG"
@@ -82,37 +81,44 @@ jobs:
         if: steps.validator.outputs.VALID_TAG != 1
         run: |
           echo "Invalid Tag - Not releasing"
-
   release:
     needs: check_for_release
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     if: needs.check_for_release.outputs.to-release == 1
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
-      - name: Bootstrap
-        run: |
-          npm run bootstrap
-      - name: Build CLI
-        run: |
-          cd packages/cli
-          npm run prepack
-      - name: Release npm
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: |
-          cd packages/cli
-          echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" > .npmrc
-          npm run release-npm
-      - name: Release Homebrew
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          GIT_PUSH_TOKEN: ${{ secrets.GIT_PUSH_TOKEN }}
-        run: |
-          git config --global user.name "Noovolari Bot"
-          git config --global user.email "info@noovolari.com"
-          cd packages/cli
-          npm run release-homebrew
+      - name: Release
+        run: echo Release triggered successfully!
+
+#  release:
+#    needs: check_for_release
+#    runs-on: macos-latest
+#    if: needs.check_for_release.outputs.to-release == 1
+#    steps:
+#      - uses: actions/checkout@v3
+#      - uses: actions/setup-node@v3
+#        with:
+#          node-version: 16
+#      - name: Bootstrap
+#        run: |
+#          npm run bootstrap
+#      - name: Build CLI
+#        run: |
+#          cd packages/cli
+#          npm run prepack
+#      - name: Release npm
+#        env:
+#          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+#        run: |
+#          cd packages/cli
+#          echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" > .npmrc
+#          npm run release-npm
+#      - name: Release Homebrew
+#        env:
+#          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#          GIT_PUSH_TOKEN: ${{ secrets.GIT_PUSH_TOKEN }}
+#        run: |
+#          git config --global user.name "Noovolari Bot"
+#          git config --global user.email "info@noovolari.com"
+#          cd packages/cli
+#          npm run release-homebrew
