--- a/.github/workflows/core-ci-cd.yml
+++ b/.github/workflows/core-ci-cd.yml
@@ -68,13 +68,9 @@ jobs:
         id: validator
         run: |
           git fetch
-          echo GITHUB_SHA: $GITHUB_SHA
           TAG=$(git tag --points-at $GITHUB_SHA)
-          echo TAG: $TAG
           MATCH=$(echo "$TAG" | grep "^core-v[0-9]\+\.[0-9]\+\.[0-9]\+$" || true)
-          echo MATCH: $MATCH
           if [[ $MATCH != "" ]]; then IS_VALID_TAG=1; else IS_VALID_TAG=0; fi;
-          echo IS_VALID_TAG: $IS_VALID_TAG
           echo "::set-output name=VALID_TAG::$IS_VALID_TAG"
 
       - name: If valid tag set
@@ -92,32 +88,23 @@ jobs:
     runs-on: ubuntu-latest
     if: needs.check_for_release.outputs.to-release == 1
     steps:
-      - name: Release
-        run: echo Release triggered successfully!
-
-#  release:
-#    needs: check_for_release
-#    runs-on: ubuntu-latest
-#    if: needs.check_for_release.outputs.to-release == 1
-#    steps:
-#      - uses: actions/checkout@v3
-#      - uses: actions/setup-node@v3
-#        with:
-#          node-version: 16
-#      - name: Bootstrap
-#        run: |
-#          npm install
-#          cd packages/core
-#          npm install
-#      - name: Build
-#        run: |
-#          cd packages/core
-#          npm run build
-#      - name: Release npm
-#        env:
-#          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-#        run: |
-#          cd packages/core
-#          echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" > .npmrc
-#          npm run release
-#
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - name: Bootstrap
+        run: |
+          npm install
+          cd packages/core
+          npm install
+      - name: Build
+        run: |
+          cd packages/core
+          npm run build
+      - name: Release npm
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: |
+          cd packages/core
+          echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" > .npmrc
+          npm run release
