--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -18,6 +18,7 @@
     "release": "standard-version",
     "ng": "ng",
     "test": "ng test",
+    "build-leapp-angular-common": "ng build leapp-angular-common",
     "build-dev": "gushio gushio/target-build.js aot",
     "build-prod": "gushio gushio/target-build.js 'configuration production'",
     "run-local": "electron --enable-accelerated-mjpeg-decode --enable-accelerated-video --ignore-gpu-blacklist --enable-native-gpu-memory-buffers --enable-gpu-rasterization --ignore-gpu-blacklist .",
@@ -191,6 +192,8 @@
     "is-url": "^1.2.4",
     "jwt-decode": "~3.1.2",
     "keytar": "7.9.0",
+    "leapp-team-core": "file:../../../../leapp-team/packages/leapp-team-core",
+    "leapp-angular-common": "file:./dist/leapp-angular-common",
     "markdown-it": "^12.0.6",
     "mousetrap": "~1.6.5",
     "ms": "^2.1.3",
@@ -220,7 +223,9 @@
     "wait-on": "^6.0.0",
     "ws": "^8.9.0",
     "zlib": "~1.0.5",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "i18next": "~21.4.2",
+    "i18next-http-backend": "~1.3.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.2.2",
@@ -263,6 +268,7 @@
     "protractor": "^7.0.0",
     "ts-node": "^9.1.1",
     "typescript": "4.5.5",
-    "util": "^0.12.4"
+    "util": "^0.12.4",
+    "ng-packagr": "13.2.1"
   }
 }
