--- a/packages/desktop-app/tsconfig.json
+++ b/packages/desktop-app/tsconfig.json
@@ -19,7 +19,10 @@
     "paths": {
       "stream": ["../node_modules/stream-browserify"],
       "assert": ["../node_modules/assert"],
-      "fs": ["../node_modules/fs-web"]
+      "fs": ["../node_modules/fs-web"],
+      "leapp-angular-common": [
+        "../node_modules/leapp-angular-common"
+      ]
     },
     "esModuleInterop": true,
     "resolveJsonModule": true,
