--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -18,11 +18,11 @@
     "release": "standard-version",
     "ng": "ng",
     "test": "ng test",
-    "build-leapp-angular-common": "ng build leapp-angular-common",
-    "build-dev": "gushio gushio/target-build.js aot",
+    "build-leapp-angular-common": "gushio gushio/build-leapp-angular-common.js",
+    "build-dev": "npm run build-leapp-angular-common && gushio gushio/target-build.js aot",
     "build-prod": "gushio gushio/target-build.js 'configuration production'",
     "run-local": "electron --enable-accelerated-mjpeg-decode --enable-accelerated-video --ignore-gpu-blacklist --enable-native-gpu-memory-buffers --enable-gpu-rasterization --ignore-gpu-blacklist .",
-    "build-and-run-dev": "gushio gushio/target-build-and-run.js aot",
+    "build-and-run-dev": "npm run build-leapp-angular-common && gushio gushio/target-build-and-run.js aot",
     "rebuild-core-and-run-dev": "cd ../core && npm run build && cd ../desktop-app && npm run build-and-run-dev",
     "release-mac": "gushio gushio/target-release.js 'configuration production' mac",
     "release-mac-dev": "gushio gushio/target-release-dev.js 'configuration staging' mac",
@@ -192,7 +192,7 @@
     "is-url": "^1.2.4",
     "jwt-decode": "~3.1.2",
     "keytar": "7.9.0",
-    "leapp-team-core": "file:../../../../leapp-team/packages/leapp-team-core",
+    "leapp-team-core": "file:../../../leapp-team/packages/leapp-team-core",
     "leapp-angular-common": "file:./dist/leapp-angular-common",
     "markdown-it": "^12.0.6",
     "mousetrap": "~1.6.5",
