--- a/packages/desktop-app/gushio/projects/leapp-angular-common/package.json
+++ b/packages/desktop-app/gushio/projects/leapp-angular-common/package.json
@@ -11,7 +11,7 @@
     "rxjs": "~6.6.0",
     "i18next": "~21.4.2",
     "i18next-http-backend": "~1.3.1",
-    "leapp-team-core": "file:../../../../../../leapp-team/packages/leapp-team-core",
+    "leapp-team-core": "file:../../../leapp-team-core",
     "tslib": "~2.3.0"
   }
 }
