--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -41,6 +41,7 @@
     "ini": "~2.0.0",
     "inquirer": "8.2.0",
     "is-url": "^1.2.4",
+    "leapp-team-core": "file:../../../leapp-team/packages/leapp-team-core",
     "jwt-decode": "~3.1.2",
     "keytar": "7.9.0",
     "ms": "^2.1.3",
