--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -22,7 +22,7 @@
     "build-dev": "npm run build-leapp-angular-common && gushio gushio/target-build.js aot",
     "build-prod": "gushio gushio/target-build.js 'configuration production'",
     "run-local": "electron --enable-accelerated-mjpeg-decode --enable-accelerated-video --ignore-gpu-blacklist --enable-native-gpu-memory-buffers --enable-gpu-rasterization --ignore-gpu-blacklist .",
-    "build-and-run-dev": "npm run build-leapp-angular-common && gushio gushio/target-build-and-run.js aot",
+    "build-and-run-dev": "gushio gushio/target-build-and-run.js aot",
     "rebuild-core-and-run-dev": "cd ../core && npm run build && cd ../desktop-app && npm run build-and-run-dev",
     "release-mac": "gushio gushio/target-release.js 'configuration production' mac",
     "release-mac-dev": "gushio gushio/target-release-dev.js 'configuration staging' mac",
