--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -38,9 +38,9 @@
     "fs-web": "1.0.1",
     "http-proxy-agent": "4.0.1",
     "https-proxy-agent": "5.0.0",
-    "ini": "~2.0.0",
     "inquirer": "8.2.0",
     "is-url": "^1.2.4",
+    "js-ini": "1.5.1",
     "jwt-decode": "~3.1.2",
     "keytar": "7.9.0",
     "ms": "^2.1.3",
