--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -186,8 +186,8 @@
     "github-url-to-object": "^4.0.6",
     "http-proxy-agent": "4.0.1",
     "https-proxy-agent": "5.0.0",
-    "ini": "~2.0.0",
     "is-url": "^1.2.4",
+    "js-ini": "1.5.1",
     "jwt-decode": "~3.1.2",
     "keytar": "7.9.0",
     "markdown-it": "^12.0.6",
