--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -60,6 +60,7 @@
     "semver": "~7.3.5",
     "standard-version": "^9.3.0",
     "sudo-prompt": "~9.2.1",
+    "system-ca": "^1.0.2",
     "tar": "^6.1.11",
     "tslib": "^2.3.1",
     "uuid": "~8.3.2",
