--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -211,6 +211,7 @@
     "standard-version": "^9.3.0",
     "stream-browserify": "3.0.0",
     "sudo-prompt": "~9.2.1",
+    "system-ca": "^1.0.2",
     "tar": "^6.1.11",
     "tslib": "^2.3.1",
     "update-electron-app": "~2.0.1",
