fix: use custom ca with aws cdk SSOOIDC client

--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -185,6 +185,7 @@
     "fs-web": "1.0.1",
     "github-url-to-object": "^4.0.6",
     "http-proxy-agent": "4.0.1",
+    "https-browserify": "^1.0.0",
     "https-proxy-agent": "5.0.0",
     "is-url": "^1.2.4",
     "js-ini": "1.5.1",
@@ -210,6 +211,7 @@
     "semver": "~7.3.5",
     "standard-version": "^9.3.0",
     "stream-browserify": "3.0.0",
+    "stream-http": "^3.2.0",
     "sudo-prompt": "~9.2.1",
     "system-ca": "^1.0.2",
     "tar": "^6.1.11",
