docs: correct several minor issues and grammatical or spelling mistakes
docs: standardize metadata to be consistent with the markdown across sections

docs: correct some spelling, grammatical, and formatting issues

docs: fix the rendering of fontawesome icons in markdown

docs: fix broken link to help plugin code

docs: remove duplicate sentence explaining integrations

docs: add icons to integration actions table

Signed-off-by: chrisRedwine <chris.redwine6610@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -108,7 +108,9 @@ extra:
       make our documentation better.
 
 markdown_extensions:
-  - pymdownx.emoji
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
   - admonition
   - pymdownx.details
   - pymdownx.highlight
