chore: update workflow action versions and templates
chore: update configure-aws-credentials action from v1 to v2

chore: correct some spelling and grammatical errors in GitHub templates and glossary

chore: update checkout action from v2 to v3

chore: update CodeQL actions from v1 to v2

chore: update action-semantic-pull-request action from v3 to v5

chore: update setup-python action from v2 to v4

chore: combine pip installs for docs action into one command per best practice

chore: upgrade deprecated set-output GitHub Actions syntax to avoid warnings

chore: address several shellcheck warnings for action run scripts

Signed-off-by: chrisRedwine <chris.redwine6610@gmail.com>

--- a/.github/workflows/cli-ci-cd.yml
+++ b/.github/workflows/cli-ci-cd.yml
@@ -34,7 +34,7 @@ jobs:
           cd packages/cli
           npm run prepack
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -66,10 +66,10 @@ jobs:
         id: validator
         run: |
           git fetch
-          TAG=$(git tag --points-at $GITHUB_SHA)
+          TAG=$(git tag --points-at "$GITHUB_SHA")
           MATCH=$(echo "$TAG" | grep "^cli-v[0-9]\+\.[0-9]\+\.[0-9]\+$" || true)
           if [[ $MATCH != "" ]]; then IS_VALID_TAG=1; else IS_VALID_TAG=0; fi;
-          echo "::set-output name=VALID_TAG::$IS_VALID_TAG"
+          echo "VALID_TAG=$IS_VALID_TAG" >> "$GITHUB_OUTPUT"
 
       - name: If valid tag set
         if: steps.validator.outputs.VALID_TAG == 1
