--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -156,7 +156,7 @@
     "@ngx-translate/core": "~13.0.0",
     "@ngx-translate/http-loader": "~6.0.0",
     "@noovolari/dpapi-addon": "0.1.2",
-    "@noovolari/leapp-core": "0.1.133",
+    "@noovolari/leapp-core": "0.1.134-rc2",
     "@types/aws-sdk": "^2.7.0",
     "assert": "2.0.0",
     "aws-sdk": "2.928.0",
@@ -208,6 +208,7 @@
     "rxjs": "~6.6.7",
     "saml-encoder-decoder-js": "~1.0.1",
     "semver": "~7.3.5",
+    "stacktrace-js": "^2.0.2",
     "standard-version": "^9.3.0",
     "stream-browserify": "3.0.0",
     "sudo-prompt": "~9.2.1",
@@ -260,6 +261,7 @@
     "node-abi": "^2.26.0",
     "nyc": "^15.1.0",
     "protractor": "^7.0.0",
+    "source-map": "^0.7.4",
     "ts-node": "^9.1.1",
     "typescript": "4.5.5",
     "util": "^0.12.4"
