feat: completed stacktrace-gps.js Gushio script

--- a/packages/desktop-app/angular.json
+++ b/packages/desktop-app/angular.json
@@ -49,7 +49,7 @@
             "staging": {
               "optimization": false,
               "outputHashing": "all",
-              "sourceMap": false,
+              "sourceMap": true,
               "namedChunks": false,
               "extractLicenses": true,
               "vendorChunk": false,
@@ -70,7 +70,7 @@
               ],
               "optimization": false,
               "outputHashing": "all",
-              "sourceMap": false,
+              "sourceMap": true,
               "namedChunks": false,
               "extractLicenses": true,
               "vendorChunk": false,
