chore: fixed team-service.ts and team-service.spec.ts

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -144,7 +144,7 @@
     "release-npm": "gushio gushio/target-npm-release.js",
     "run-plugin": "./bin/run session run-aws-credential-plugin",
     "nightly": "gushio gushio/target-nightly.js",
-    "debug": "bin/run team login"
+    "debug": "./bin/dev team login"
   },
   "types": "dist/index.d.ts"
 }
