chore: updated cli-ci-cd.yml

--- a/.github/workflows/cli-ci-cd.yml
+++ b/.github/workflows/cli-ci-cd.yml
@@ -103,6 +103,7 @@ jobs:
         run: |
           cd packages/cli
           echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" > .npmrc
+          npm run release-npm
       - name: Release Homebrew
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
