--- a/packages/desktop-app/tsconfig.json
+++ b/packages/desktop-app/tsconfig.json
@@ -6,27 +6,37 @@
     "strictInjectionParameters": true
   },
   "compilerOptions": {
-    "allowSyntheticDefaultImports" : true,
+    "allowSyntheticDefaultImports": true,
     "baseUrl": "./",
     "declaration": false,
     "experimentalDecorators": true,
-    "lib": ["ES2019", "DOM"],
+    "lib": [
+      "ES2019",
+      "DOM"
+    ],
     "module": "ES2020",
     "moduleResolution": "Node",
     "sourceMap": true,
     "target": "ES2019",
-    "typeRoots": ["../node_modules/@types"],
+    "typeRoots": [
+      "../node_modules/@types"
+    ],
     "paths": {
-      "stream": ["../node_modules/stream-browserify"],
-      "assert": ["../node_modules/assert"],
-      "fs": ["../node_modules/fs-web"],
-      "leapp-angular-common": [
-        "dist/leapp-angular-common"
+      "stream": [
+        "../node_modules/stream-browserify"
+      ],
+      "assert": [
+        "../node_modules/assert"
+      ],
+      "fs": [
+        "../node_modules/fs-web"
       ]
     },
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "types": ["node"]
+    "types": [
+      "node"
+    ]
   },
   "include": [
     "src/**/*.ts"
