chore: team service is working in both desktop app and cli

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ packages/desktop-app/electron/dist
 # Only exists if Bazel was run
 packages/desktop-app/bazel-out
 packages/desktop-app/.angular
-packages/desktop-app/src/app/services/team-service.ts
+**/team-service.ts
 **/leapp-team-core
 
 # dependencies
