chore: fixed desktop app build and authentication interceptor service

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -93,7 +93,8 @@
             "prefix": "app",
             "style": "camelCase"
           }
-        ]
+        ],
+        "jsdoc/newline-after-description": "off"
       }
     },
     {
