--- a/.github/workflows/cli-ci-cd-team.yml
+++ b/.github/workflows/cli-ci-cd-team.yml
@@ -35,8 +35,10 @@ jobs:
       - name: Inject Team Feature
         if: ${{ env.TEAM_REPOSITORY != '' }}
         run: |
-          cd ../leapp-team/packages/leapp-team-service
-          npm run enable-team-features
+          cd ..
+          ls
+#          cd ../leapp-team/packages/leapp-team-service
+#          npm run enable-team-features
       - name: Bootstrap
         run: |
           npm run bootstrap
