chore: added token

--- a/.github/workflows/cli-ci-cd-team.yml
+++ b/.github/workflows/cli-ci-cd-team.yml
@@ -32,6 +32,7 @@ jobs:
         with:
           repository: Noovolari/leapp-team
           ref: LPTM-203-how-to-integrate-leapp-team-core-in-open-source-repository
+          token: ${{ secrets.GH_TOKEN }}
       - name: Inject Team Feature
         if: ${{ env.TEAM_REPOSITORY != '' }}
         run: |
