--- a/.github/workflows/desktop-app-cd.yml
+++ b/.github/workflows/desktop-app-cd.yml
@@ -66,7 +66,7 @@ jobs:
         if: ${{ env.TEAM_REPOSITORY != '' }}
         with:
           repository: ${{ env.TEAM_REPOSITORY }}
-          ref: LPTM-203-how-to-integrate-leapp-team-core-in-open-source-repository
+          ref: main
           token: ${{ secrets.GH_TOKEN }}
           path: leapp-team
       - name: Inject Team Feature
@@ -120,7 +120,7 @@ jobs:
         if: ${{ env.TEAM_REPOSITORY != '' }}
         with:
           repository: ${{ env.TEAM_REPOSITORY }}
-          ref: LPTM-203-how-to-integrate-leapp-team-core-in-open-source-repository
+          ref: main
           token: ${{ secrets.GH_TOKEN }}
           path: leapp-team
       - name: Inject Team Feature
@@ -165,7 +165,7 @@ jobs:
         if: ${{ env.TEAM_REPOSITORY != '' }}
         with:
           repository: ${{ env.TEAM_REPOSITORY }}
-          ref: LPTM-203-how-to-integrate-leapp-team-core-in-open-source-repository
+          ref: main
           token: ${{ secrets.GH_TOKEN }}
           path: leapp-team
       - name: Inject Team Feature
@@ -249,7 +249,7 @@ jobs:
         if: ${{ env.TEAM_REPOSITORY != '' }}
         with:
           repository: ${{ env.TEAM_REPOSITORY }}
-          ref: LPTM-203-how-to-integrate-leapp-team-core-in-open-source-repository
+          ref: main
           token: ${{ secrets.GH_TOKEN }}
           path: leapp-team
       - name: Inject Team Feature
